[package]
name = "chip8_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
byteorder = "1"
bevy = {version = "0.9", default-features=false, features=["animation", "bevy_asset", "bevy_gilrs", "bevy_scene", "bevy_winit",  "render", "png", "hdr", "x11", "filesystem_watcher",]}
bevy_egui = "0.17"
bevy_kira_audio = { version = "0.13" }
bevy_asset_loader = { version = "0.12" }
lazy_static = "1.4.0"
rfd = "0.5.0"
rand = "0.7.3"
